# Agno_RAG

./: .gitignore  app.py  langfuse_test.py  pyproject.toml  query.py  query_demo.py  test_client.py  test_direct_ingest.py
data/: ui_registry.json
data/knowledge/lancedb/rag_anything_docs.lance/_transactions/: 0-6d5fc8d2-be34-4980-be49-52a6fb14a962.txn  1-636b0842-ed81-4d67-a26f-3083c5c54e84.txn  10-4f2caa12-06d4-48dc-aac3-d6bcd0f376de.txn  100-84fd7d7c-794c-4123-a8d4-23407586aacd.txn  1000-748cf500-fbba-4277-b58f-54d663a62c3b.txn  1001-5bab9ffa-7f0f-4ed1-b79c-5ad94b9afe69.txn  1002-9c1f945c-1b68-431e-a982-d95308a15635.txn  1003-81399110-7c1d-4be5-b85c-cf4105fa8917.txn  1004-4b6a1af4-57c8-48a0-aecf-1b9ee0efc765.txn  1005-740d9be4-6e78-4043-b13c-497128cc46c0.txn  101-9cd6d530-d214-433a-bbb9-86c167ea8155.txn  (+2783 more)
data/parser_output/20260306_194811_448174_Jatan_Resume_updated/auto/: 20260306_194811_448174_Jatan_Resume_updated.md  20260306_194811_448174_Jatan_Resume_updated_middle.json  20260306_194811_448174_Jatan_Resume_updated_model.json
data/parser_output/20260306_195452_407403_Jatan_Resume_updated/auto/: 20260306_195452_407403_Jatan_Resume_updated_content_list.json
data/parser_output/Chapter-2/auto/: Chapter-2_content_list.json  Chapter-2_middle.json
data/state/: knowledge.sqlite  pipeline.sqlite
debug_out/Chapter-2/auto/: Chapter-2.md  Chapter-2_model.json
src/data/state/: pipeline.sqlite
src/rag_agno/: __init__.py  config.py  context.py  knowledge.py  mcp_server.py  processors.py  query_pipeline.py  query_schemas.py  schemas.py  service.py  stores.py  utils.py
(+3 files in other folders)
